<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/animalSelectionFragment">

    <fragment
        android:id="@+id/animalSelectionFragment"
        android:name="nz.ac.uclive.mjk141.en_dedictionary.animal_selection.AnimalSelectionFragment"
        android:label="@string/app_name"
        tools:layout="@layout/animal_selection_fragment">
        <action
            android:id="@+id/action_animalSelectionFragment_to_fragmentAnimalView"
            app:destination="@id/fragmentAnimalView"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/navigate_to_add_anima_screen"
            app:destination="@id/fragmentAddAnimal"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/fragmentAnimalView"
        android:name="nz.ac.uclive.mjk141.en_dedictionary.view_animal.ViewAnimalFragment"
        tools:layout="@layout/view_animal_fragment"
        android:label="@string/view_animal_title">
        <argument
            android:name="animalId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/fragmentAddAnimal"
        android:name="nz.ac.uclive.mjk141.en_dedictionary.add_animal.AddAnimalFragment"
        android:label="@string/title_add_animal"
        tools:layout="@layout/add_animal_fragment">
        <action
            android:id="@+id/action_fragmentAddAnimal_to_animalSelectionFragment"
            app:destination="@id/animalSelectionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/animalSelectionFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>